Toto its call journaling, I went journaling

--- a/Journal/Daily/2024-07-20.md
+++ b/Journal/Daily/2024-07-20.md
@@ -1,52 +1,48 @@
----
-tags:
-  - Journal
-created: 2024-07-20
-auteur:
-  - ChatGPT 4-o
-  - Me
----
-# Journal entry for Saturday, 2024-07-20
-
-## Summary of yesterday's entry
-
-For dinner yesterday, I had grilled chicken with vegetables. I would grade the day a B+. I was on time for work. In the morning, I completed a major presentation at work, and in the afternoon, I attended several meetings. After work, I went to the gym, and in the evening, I relaxed and read a book. Emotionally, I felt content and accomplished; particularly happy when I finished my presentation. I'm proud of delivering a successful presentation at work. I balanced giving to others and taking time for myself by offering help to a colleague while also ensuring I went to the gym. The most worthwhile activity was preparing for and executing the presentation, which contributed to my professional goals. Tomorrow, I plan to focus on deepening my self-awareness and continuing to build my professional skills.
-
-## Questions about yesterday
-
-1. **Morning**: What specific activities or routines did you engage in during your morning, and did any of them set a particular tone or mood for the rest of the day?
-
-2. **After work**: Can you describe in more detail what you did after work? Did you engage in any hobbies, social activities, or relaxation techniques that impacted your evening?
-
-3. **What did you learn today**: Can you elaborate on any insights or lessons you gained throughout the day? How do you plan to apply these learnings to your future actions or decisions?
-
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+I did not journal that much during camp, but there are a few things I want to write about
 
-## What did you do today?
+### Saturday 2024-07-13
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+Today, I was in some real danger. Our ship was sailing on the Oosterschelde when the motor ceased operating. We had many children on board.
 
-## Reflections
+We needed to detach the boats we were carrying to restart the engine. So I and two fellow scouts jumped on the attached motorboat and detached from the main ship.
 
-1. Reflecting on your emotions today, how did you feel at different points throughout the day? Did you notice any patterns based on yesterday's experience of contentment and accomplishment?
+We started setting up a course for some piers in the distance. And left the main ship behind.
+I could not shake the sense that I was abandoning them and leaving them to die (although it was not that serious)
 
-2. Looking back on today's achievements and activities, what are you most proud of? Did you take a moment to celebrate your accomplishments like you did with your successful presentation yesterday?
+Onboard the main ship, they called the emergency services, who arrived very quickly to tow them.
 
-3. Evaluate how you balanced giving to others and taking time for yourself today. Did you succeed in this balance as effectively as yesterday? If not, what changes could you implement tomorrow?
+And we also sailed back to the same harbor through crashing waves that could have pulled us under.
 
-4. Identify an activity from today that you found most worthwhile. How does this compare to the worthiness you felt in preparing for and delivering your work presentation yesterday?
+I went as well as possible, but the whole event may still shake me, although I don't know how this manifests.
 
-5. What steps did you take today to deepen your self-awareness and build your professional skills, as you planned? How will you continue to enhance these areas tomorrow?
+<https://www.hvzeeland.nl/nieuws/59439-scoutingboot-in-problemen-bij-stavenisse/>
+<https://www.instagram.com/p/C9XO8zvshle/?utm_source=ig_web_button_share_sheet&igsh=MzRlODBiNWFlZA==>
 
-## What did you learn today?
+## Thursday 2024-07-18
 
-- 
+Today, we heard that we would be leaving the camp one day earlier to avoid some bad weather.
 
-## Plans for Tomorrow
+I don't know what it was, but this made me really sad or panicky.
+
+I narrowed it down to the following things.
+
+- trauma from the first journey
+- I am sad to be leaving camp
+  - both missing a day of activities
+  - the joy that the children bring
+  - and the ease of life that camp brings
+- a feeling like I'm abandoning my fellow scouts by leaving early and leaving them with the clean-up
+- the realization that camp is over
+- the sudden change and feeling unprepared for it
+- all the things I had put off to the last day that I now did not have
+
+I cried uncontrollably until I asked some people about the plan and started participating in an activity.
+
+## saturday 2024-07-21
+
+It's funny how quickly I fall back into (bad) habits.
+I'm not even one day back from camp, and I'm already back to doing what I was doing before.
+
+I should make mental notes to change some habits
