--- a/Journal/Daily/2024-07-21.md
+++ b/Journal/Daily/2024-07-21.md
@@ -10,43 +10,93 @@ auteur:
 
 ## Summary of yesterday's entry
 
-Yesterday, I had pasta for dinner and rated my day a "B." I was on time for work. In the morning, I completed several tasks, and in the afternoon, I attended meetings. After work, I went for a run, and in the evening, I relaxed with a book. Reflecting on my emotions, I felt productive and noticed a sense of accomplishment similar to the previous day. I was proud of handling work efficiently but did not celebrate my achievements as I did with the presentation. I partially succeeded in balancing time for myself and others, and I plan to improve this tomorrow. The run was the most worthwhile activity, comparable to the sense of achievement from my presentation. I focused on improving self-awareness and professional skills by evaluating my performance and setting goals for tomorrow.
+During camp, there were several notable events. On July 13, our ship faced a critical situation when the engine stopped working while sailing on the Oosterschelde with many children on board. My fellow scouts and I used a motorboat to help restart the engine, while emergency services towed the main ship to safety. This event left me shaken. On July 18, we learned we'd depart camp a day early due to impending bad weather, which triggered sadness and panic in me. I felt a mix of emotions, from missing out on camp activities and the community to feeling unprepared for the sudden change. Expressing these feelings and engaging in activities helped me cope. By July 21, I noticed how quickly I reverted to pre-camp habits and recognized the need to make positive changes.
 
 ## Questions about yesterday
 
-1. You mentioned feeling accomplished and content yesterday; did you find that the emotions you experienced today were influenced by those feelings? Could you describe specific moments where this link was evident?
+> Reflecting on the incident on the Oosterschelde, you mentioned feeling a sense of abandoning the main ship despite it not being that serious. Can you elaborate more on your emotions during that moment and how you believe it might have impacted you since then?
 
-2. You reflected on your achievements and taking a moment to celebrate them yesterday. What specific accomplishments from today are you most proud of, and how did you take the time to appreciate them?
+I always say to the clildren that people are more important than things. but in that moment I chose things over people.
 
-3. Thinking about your goal of balancing giving to others and taking time for yourself, how did you manage this balance throughout today compared to yesterday? Can you provide an example of a situation where you felt this balance was particularly successful or challenging?
+I also feld like i chose my own safety over the safety of the children.
+
+I think that I started towing the main ship I would be able to get it into the harbor or at least into the wind so that it would deal with the waves better.
+
+> You've outlined several possible reasons for feeling sad or panicky about leaving camp early. Can you go deeper into which of those reasons resonate most with you and why? Additionally, how has the quick end to camp affected your overall experience and memories of the camp?
+
+when I looked back at the photos of the day I was sad to not be there.
+so I think that was the main reason tougether with the unknown and some trauma
+
+I think I did not lessen the enjoyabilty of the camp.
+
+>You noted that you've quickly fallen back into bad habits after returning from camp. Could you describe what some of these habits are and why you consider them 'bad'? Moreover, what specific changes or strategies do you think might help you maintain positive behaviors you experienced at camp?
+
+watching a lot of instant videos
+not taking time for the little things
+same food and drink as before camp
+
+I should think about this more tomorrow
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+**What did you have for dinner**: shawarma
+**Grade for the day**: 7 (if you see today as a rest day)
+**Did you shower?**: I showered yesterday
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: Woke up on time (0900) and then watched Instagram reels
+**Afternoon**: worked on a crawler and watched the f1 race
+**Evening**: did some OSM and watched CNN for the stepping down of Biden
 
 ## Reflections
 
-1. Reflecting on today's activities, how did I feel throughout the day? Did I notice any moments where my emotions significantly shifted? How did I handle those transitions?
+1. Reflecting on Today's Emotions: Yesterday, you felt shaken, sad, and panicked due to challenging events at camp. How did you feel today? Were there any specific moments that triggered strong emotions, and how did you handle them?
 
-2. Which moments today made me feel proud of myself? How can I celebrate these achievements, both big and small, more effectively tomorrow?
+Today im calm because Im in a fermiliar enviroment doing things I know
 
-3. In what ways did I practice being more egotistical in a positive manner today? Did I recognize moments where I put my needs first? How did this impact my overall well-being?
+3. Pride and Accomplishment: Considering your goal of being proud of yourself and reflecting on how you helped restart the engine and ensured children’s safety yesterday, what actions or achievements today made you feel proud? How did you recognize and celebrate these accomplishments?
 
-4. What was the most worthwhile activity I engaged in today? How does it compare to the sense of worth and accomplishment I felt during my run yesterday?
+I always tought of my self as a person that stays calm in stressfull situations.
+and that day I was proven right.
 
-5. Considering my goal of balancing time for myself and others, how did today go in comparison to yesterday? What specific strategies can I implement tomorrow to further enhance this balance?
+I saw it comming was prepaired, prepaired the people around me and when it happed I acted.
+
+the captain of the ship was in light pannic because he could not leave his station to fix the motor. so he could do nothing and when I proposed decouping the towed ships he aggreed.
+
+6. Positive Changes and Awareness: Thinking about how you observed reverting to pre-camp habits, what steps did you take today to implement positive changes in your routine? How did being more aware of your feelings help guide these changes?
+
+I did not make any changes to my habbits this is someting I want to work on
+
+8. Reflecting on today's activities, how did I feel throughout the day? Did I notice any moments where my emotions significantly shifted? How did I handle those transitions?
+no big emotions today
+
+7. Which moments today made me feel proud of myself? How can I celebrate these big and small achievements more effectively tomorrow?
+I successfully build a complex scraper for a story website in 2 days.
+
+8. In what ways did I practice being more egotistical in a positive manner today? Did I recognize moments where I put my needs first? How did this impact my overall well-being?
+
+I did not need to be egotistical today.
+
+9. What was the most worthwhile activity I engaged in today?
+
+I continued some projects I abandoned some time ago.
 
 ## What did you learn today?
 
-- 
+- Biden is not running for president
+- building good software is hard
+- synthetic grace does not come out of clothing after one 60-degree cycle
 
 ## Plans for Tomorrow
+
+going back to work after a week of summer camp
+
+Play DnD in a new environment (at somebody's home)
+
+make some of the tests for the psychologist
+I need to put the appointments in the calendar
+
+## note for chatgpt
+
+write questions about exploring my (bad) habbits and what I want to change about them
